--- a/.github/workflows/main_CHATBOTPOND.yml
+++ b/.github/workflows/main_CHATBOTPOND.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: sampleappaoaichatgpt.azurecr.io/${{ secrets.ACR_USERNAME }}/sample-app-aoai-chatgpt:${{ github.sha }}
+        tags: airegistryppp.azurecr.io/${{ secrets.ACR_USERNAME }}/sample-app-aoai-chatgpt:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
