--- a/.github/workflows/main_CHATBOTPOND.yml
+++ b/.github/workflows/main_CHATBOTPOND.yml
@@ -14,13 +14,15 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
     - name: List all files recursively
       run: ls -R
       
     - name: Verify Dockerfile exists
       run: ls -la ./Dockerfile
-
-    - uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
